style.css
* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  font-family: "Open Sans", sans-serif;
  word-wrap: balance;
}

.navbar-home {
  width: 100%;
  height: 100vh;
  background-image: url("./img/home.jpg");
  background-size: cover;
  overflow: auto;
  background-position: center;
  background-repeat: no-repeat;
}

.navbar-about {
  width: 100%;
  height: 100vh;
  background-image: url("./img/about.jpg");
  background-size: cover;
  overflow: auto;
  background-position: center;
  background-repeat: no-repeat;
}

.navbar-topic {
  width: 100%;
  height: 100vh;
  background-size: cover;
  overflow: auto;
  background-position: center;
  background-repeat: no-repeat;
  padding-bottom: 100px;
}

nav {
  width: 100%;
  height: 80px;
  background: rgba(0, 0, 0, 0.3);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

nav h1 {
  padding-left: 10px;
  padding-right: 10px;
  font-size: 32px;
  color: #fff;
}

nav ul li {
  display: inline-block;
  list-style: none;
  margin: 0px 5px;
}

nav ul li a {
  text-decoration: none;
  color: #fff;
  font-size: 18px;
  padding: 8px 15px;
  border-radius: 5px;
}

nav ul li a:hover {
  background-color: #003b6f;
  transition: all 0.2s ease-in-out;
}

h1 {
  padding-left: 20px;
  margin: 0;
  font-size: 36px;
}

nav h1 {
  text-decoration: none;
  color: #fff;
  padding: 8px 15px;
  border-radius: 5px;
}

body {
  margin: 0;
  font-family: "Open Sans", sans-serif;
  font-size: 16px;
  line-height: 1.5;
}

.cta {
  text-align: center;
  padding: 50px;
}

.gallery-section {
  text-align: center;
  padding: 50px;
  padding-top: 150px;
}

h2 {
  font-family: "Open Sans", sans-serif;
  font-size: 48px;
  font-weight: bold;
  margin-bottom: 20px;
  letter-spacing: 2px;
  text-align: center;
  justify-content: center;
}

p {
  font-family: "Open Sans", sans-serif;
  font-size: 18px;
  font-weight: lighter;
  letter-spacing: 1px;
  line-height: 1.6;
}

button {
  background-color: #003b6f;
  color: #fff;
  border: none;
  padding: 10px 25px;
  font-family: "Open Sans", sans-serif;
  font-size: 24px;
  font-weight: bold;
  letter-spacing: 2px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.contact:hover {
  background-color: #4caf50;
  transition: all 0.2s ease-in-out;
}

footer {
  text-align: center;
  padding: 20px;
  font-size: 14px;
  background-color: #003b6f;
  color: #fff;
}

.about h2 {
  font-size: 32px;
  font-weight: bold;
  letter-spacing: 2px;
  margin-bottom: 30px;
  margin-left: 20p;
  text-align: center;
}

.about p {
  font-size: 18px;
  line-height: 1.6;
  margin-top: 25px;
  margin-bottom: 25px;
  margin-left: 20px;
  margin-right: 20px;
  text-align: justify;
  font-weight: 600;
}

#videobcg {
  position: absolute;
  top: 0;
  left: 0;
  min-width: 100%;
  min-height: 100%;
  height: auto;
  width: auto;
  /* new CSS style I have learned on your own*/
  z-index: -100;
  /* I discovered z-index while trying to keep the video in the background and the navigation bar in the foreground */
}

.m-p-g {
  max-width: 100%;
  margin: 0 auto;
  padding-bottom: 100px;
}

.m-p-g__thumbs-img {
  margin: 0;
  float: left;
  vertical-align: bottom;
  cursor: pointer;
  z-index: 1;
  position: relative;
  opacity: 0;
  filter: brightness(100%);
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  will-change: opacity, transform;
  transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
}

.m-p-g__thumbs-img.active {
  z-index: 50;
}

.m-p-g__thumbs-img.layout-completed {
  opacity: 1;
}

.m-p-g__thumbs-img.hide {
  opacity: 0;
}

.m-p-g__thumbs-img:hover {
  filter: brightness(110%);
}

.m-p-g__fullscreen {
  position: fixed;
  z-index: 10;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  width: 100%;
  height: 100vh;
  background: rgba(0, 0, 0, 0);
  visibility: hidden;
  transition: background 0.25s ease-out, visibility 0.01s 0.5s linear;
  will-change: background, visibility;
  backface-visibility: hidden;
}

.m-p-g__fullscreen.active {
  transition: background 0.25s ease-out, visibility 0.01s 0s linear;
  visibility: visible;
  background: rgba(0, 0, 0, 0.95);
}

.m-p-g__fullscreen-img {
  pointer-events: none;
  position: absolute;
  transform-origin: left top;
  top: 50%;
  left: 50%;
  max-height: 100vh;
  max-width: 100%;
  visibility: hidden;
  will-change: visibility;
  transition: opacity 0.5s ease-out;
}

.m-p-g__fullscreen-img.active {
  visibility: visible;
  opacity: 1 !important;
  transition: transform 0.5s cubic-bezier(0.23, 1, 0.32, 1),
    opacity 0.5s ease-out;
}

.m-p-g__fullscreen-img.almost-active {
  opacity: 0;
  transform: translate3d(0, 0, 0) !important;
}

.m-p-g__controls {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 200;
  height: 20vh;
  background: linear-gradient(to top, transparent 0%, rgba(0, 0, 0, 0.55) 100%);
  opacity: 0;
  visibility: hidden;
  transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
}

.m-p-g__controls.active {
  opacity: 1;
  visibility: visible;
}

.m-p-g__controls-close,
.m-p-g__controls-arrow {
  appearance: none;
  border: none;
  background: none;
}

.m-p-g__controls-close:focus,
.m-p-g__controls-arrow:focus {
  outline: none;
}

.m-p-g__controls-arrow {
  position: absolute;
  z-index: 1;
  top: 0;
  width: 20%;
  height: 100vh;
  display: flex;
  align-items: center;
  cursor: pointer;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
  opacity: 0;
}

.m-p-g__controls-arrow:hover {
  opacity: 1;
}

.m-p-g__controls-arrow--prev {
  left: 0;
  padding-left: 3vw;
  justify-content: flex-start;
}

.m-p-g__controls-arrow--next {
  right: 0;
  padding-right: 3vw;
  justify-content: flex-end;
}

.m-p-g__controls-close {
  position: absolute;
  top: 3vh;
  left: 3vw;
  z-index: 5;
  cursor: pointer;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

.m-p-g__btn {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  background: rgba(255, 255, 255, 0.07);
  transition: all 0.25s ease-out;
}

.m-p-g__btn:hover {
  background: rgba(255, 255, 255, 0.15);
}

.m-p-g__alertBox {
  position: fixed;
  z-index: 999;
  max-width: 700px;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: white;
  padding: 25px;
  border-radius: 3px;
  text-align: center;
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.23), 0 10px 40px rgba(0, 0, 0, 0.19);
  color: grey;
}

.m-p-g__alertBox h2 {
  color: red;
}

/* DEMO */

.demo-btn {
  display: inline-block;
  margin: 0 2.5px 4vh 2.5px;
  text-decoration: none;
  color: grey;
  padding: 15px;
  line-height: 1;
  min-width: 140px;
  background: rgba(0, 0, 0, 0.07);
  border-radius: 6px;
}

.demo-btn:hover {
  background: rgba(0, 0, 0, 0.12);
}

@media (max-width: 640px) {
  .demo-btn {
    min-width: 0;
    font-size: 14px;
  }
}

body {
  display: flex;
  flex-flow: column;
}

footer {
  margin-top: auto;
}

/* Mobile Layout */
@media screen and (max-width: 799px) {
  header {
    background-color: rgb(179, 199, 237);
    padding: 5px;
  }
  nav li {
    display: flex;
    list-style: none;
    margin: 0px 5px;
    justify-content: center;
  }

  /* I have tried to fix the sidebar after the navbar in Mobile view using the container div and aside tag*/
  .container {
    display: flex;
    flex-direction: column;
  }

  aside ul li {
    font-size: 12px;
    width: auto;
    margin-top: 3px;
    font-weight: bold;
  }

  .aside li {
    padding-top: 2px;
  }

  .gallery-section {
    margin-bottom: 20px;
  }

  .gallery-images {
    display: flex;
    flex-wrap: wrap;
  }

  .gallery-images img {
    max-width: 100%;
    height: auto;
  }

  .gallery-images-vertical img {
    max-width: 100%;
    height: auto;
  }

  .header,
  .hero,
  .sidebar,
  .footer {
    width: 100%;
  }
}

/* Tablet Layout */
@media (min-width: 800px) and (max-width: 1199px) {
  .container {
    display: flex;
    flex-direction: row;
  }

  .gallery-images img {
    max-width: auto;
    height: 50%;
    margin-right: 10px;
    margin-bottom: 10px;
  }

  .gallery-images-vertical img {
    max-width: 30%;
    height: auto;
    margin-right: 10px;
    margin-bottom: 10px;
  }
  .footer {
    height: auto;
  }
}

